--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,7 +66,10 @@
     <Compile Include="Assets\Script\AttackSense.cs" />
     <Compile Include="Assets\Script\Enemy.cs" />
     <Compile Include="Assets\Script\ExitUI.cs" />
+    <Compile Include="Assets\Script\FSM.cs" />
     <Compile Include="Assets\Script\GameStart.cs" />
+    <Compile Include="Assets\Script\IdleState.cs" />
+    <Compile Include="Assets\Script\IState.cs" />
     <Compile Include="Assets\Script\LifeBar.cs" />
     <Compile Include="Assets\Script\Player.cs" />
     <Compile Include="Assets\Script\PlayerLife.cs" />
