--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,8 +66,8 @@
     <Compile Include="Assets\Script\AttackSense.cs" />
     <Compile Include="Assets\Script\Enemy.cs" />
     <Compile Include="Assets\Script\EnmeyAttack.cs" />
-    <Compile Include="Assets\Script\ExitUI.cs" />
     <Compile Include="Assets\Script\FSM.cs" />
+    <Compile Include="Assets\Script\GameManager.cs" />
     <Compile Include="Assets\Script\GameStart.cs" />
     <Compile Include="Assets\Script\IdleState.cs" />
     <Compile Include="Assets\Script\IState.cs" />
